# RGen

./: Cargo.toml  README.md
src/: main.rs
src/emulator/: audio.rs  memory.rs  mod.rs  rom.rs  video.rs  z80.rs
src/ui/: app.rs
